# aplusml

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  draw.py  pad.py  parse.py  plot.py  pyproject.toml  requirements.txt  run.py  schema.yaml  sim.py
input/: sample_data.csv
src/aplusml/: __init__.py  draw.py  models.py  parse.py  plot.py  run.py  sim.py
tests/: run_tests.py  test1.py  test1.yaml  test2.py  test2.yaml  test3.py  test3.yaml  test4.py  test4.yaml  test5.py  test5.yaml  test6.py  test6.yaml  utils.py
tutorials/: acp_jung_replication.ipynb  acu.ipynb  create_synthetic_pad_inputs.py  femr.ipynb  pad.ipynb  pad.py  stemi.ipynb  stemi.py
tutorials/seismometer/: config.yml  dictionary.yml  usage_config.yml
tutorials/seismometer/data/: synthetic_pad_inputs.csv
workflows/: acp_jung_replication.yaml  acu.yaml  pad_doctor.yaml  pad_nurse.yaml  stemi.yaml
