[tool.poetry]
name = "aplusml"
version = "0.1.0"
description = "Conduct usefulness simulations of ML models embedded in workflows"
authors = ["Michael Wornow"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/som-shahlab/aplus"
"Bug Tracker" = "https://github.com/som-shahlab/aplus/issues"